@@ -15,6 +15,8 @@ Version 2.6
   integers instead of longs)
 - groupby filter now supports dotted notation for grouping by attributes
   of attributes.
+- scoped blocks not properly treat toplevel assignments and imports.
+  Previously an import suddenly "disappeared" in a scoped block.
 
 Version 2.5.5
 -------------
